# WebRTC-QoE-Data-Generator

./: .dockerignore  .gitignore  CLAUDE.md  FEASIBILITY_REPORT.md  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
docker/: Dockerfile.browser  Dockerfile.signaling
pipeline/: browser.py  dataset.py  network.py  orchestrator.py  surrogate.py  traffic.py  vmaf.py
scripts/: generate_input_video.sh
signaling/: server.py
signaling/static/: index.html
